# jpeg_compressor

./: CMakeLists.txt  ac_data.tmp  acu_data.tmp  dc_data.tmp  dcu_data.tmp  main.cpp  main2.cpp  tempFileAC.bin.tmp  tempFileAC.bin.tmp.compressed  tempFileDC.bin.tmp  tempFileDC.bin.tmp.compressed  tempFileDC1.bin.tmp  tempFileDC1.bin.tmp.compressed  tempFileDC2.bin.tmp  tempFileDC2.bin.tmp.compressed  tmp_huffman.bin.compressed
huffman/: bitvector.cpp  bitvector.h  compressor.cpp  compressor.h  huf_main.cpp  huf_main.h
jpeg_source/: converter.m  jpegdec.cpp  jpegenc.cpp  jpegenc.h  my_compress.cpp  my_compress.h  openppm.m  ppm2raw.m  run_dec.bat  run_enc.bat
root/: ac_data.tmp  acu_data.tmp  airplane80.jpg.encoded  cat.raw  cat80.jpg.encoded  dc_data.tmp  dcu_data.tmp  fruits.jpg.encoded  fruits.raw  girl80.jpg.encoded  log.txt  log2.txt  tmp_huffman.bin.compressed
